Apply correct spacing for messages without a description.

--- a/gitb-ui/ui/src/styles/less/components/sequence-diagram.less
+++ b/gitb-ui/ui/src/styles/less/components/sequence-diagram.less
@@ -301,6 +301,7 @@
         .title-container {
           display: flex;
           justify-content: center;
+          min-height: 20px;
         }
 
         .title {
